# Bobbys-Workshop-

./: .env.example  .gitignore  AGENTS.md  AUDIT_REPORT.md  BEYOND_WORLD_CLASS.md  BEYOND_WORLD_CLASS_COMPLETE.md  BOBBYS_SECRET_ROOMS.md  CLEANUP_SUMMARY.md  DEPLOYMENT_GUIDE.md  DIAGNOSTIC_REPAIR_FEATURES.md  ENTERPRISE_READINESS_CHECKLIST.md  INTEGRATION_COMPLETE.md  PORTFOLIO_NOTES.md  PRODUCTION_GRADE_100_PERCENT_COMPLETE.md  PRODUCTION_GRADE_FINAL_STATUS.md  README.md  REAL_IMPLEMENTATIONS_COMPLETE.md  REFACTORING_COMPLETE.md  THE_FORGE_DOCTRINE.md  TRANSCENDENT_LEGENDARY_COMPLETE.md  UNIVERSAL_ENTERPRISE_SYSTEM_COMPLETE.md  UNIVERSAL_LEGEND_STATUS_COMPLETE.md  UNIVERSAL_LEGEND_STATUS_IMPLEMENTATION.md  UNIVERSAL_LEGEND_STATUS_UPGRADE.md  UNIVERSAL_PLATFORM_INTEGRATION_COMPLETE.md  WORLD_CLASS_STACK_IMPLEMENTATION.md  build_release.ps1  electron-builder.yml  eslint.config.js  index.html  package-lock.json  package.json  vite-plugin-backend-auto-start.ts  vite.config.ts
Backups/: !BACKUP NOTES.txt
Data/: !PLACE-NEW-RAMDISK-DATA.txt
backend/: apple_engine.py  gaming_engine.py  mtk_v3_engine.py  phoenix_integrator.py  qualcomm_auth.py  requirements.txt  security_overlay.py  server.py  wearables_engine.py
core/: __init__.py  (+1 more)
engine/: Cargo.toml  FOUNDATION_COMPLETE.md  README.md
engine/engine/core/: Cargo.toml
engine/engine/jobs/: Cargo.toml
engine/engine/jobs/src/: job_system.rs  lib.rs
engine/engine/render/: Cargo.toml
engine/engine/render/src/: error.rs  lib.rs  render_graph.rs
engine/engine/render/src/vulkan/: device.rs  mod.rs  swapchain.rs
(+344 files in other folders)
