[workspace]
members = [
  "engine/core",
  "engine/render",
  "engine/physics",
  "engine/ecs",
  "engine/jobs",
  "engine/platform",
  "tools/asset_pipeline",
  "tools/editor",
  "tools/validators",
  "game"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Core
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = "1"
log = "0.4"
env_logger = "0.11"

# Math
glm = "0.3"

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Profiling
tracy-client = "0.20"

# Logging
spdlog = "0.2"
fmt = "0.2"
